<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/TopLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="#00A3D9"
        android:layout_weight="1"
        android:orientation="vertical">
        
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:orientation="horizontal" >
        	
            <ImageView
                android:id="@+id/line_mark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/tokyometro"
                android:contentDescription="画像"
                android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
        		android:layout_marginRight="0dp"
        		android:layout_marginTop="0dp"
                />
            
            <LinearLayout
        		android:layout_width="0dp"
        		android:layout_height="match_parent"
        		android:layout_weight="3"
        		android:orientation="vertical" >
        		
                <LinearLayout
        			android:layout_width="match_parent"
        			android:layout_height="0dp"
        			android:layout_weight="1"
        			android:orientation="horizontal" >
        			
                    <TextView
                		android:id="@+id/point_label_key"
                		android:layout_height="match_parent"
                		android:layout_width="0dp"
                		android:layout_weight="1"
                		android:text="@string/point_label_key"
                		android:gravity="center_vertical"
                		android:textColor="#FFFFFF"/>
                    
                    <TextView
                		android:id="@+id/point_label_value"
                		android:layout_height="match_parent"
                		android:layout_width="0dp"
                		android:layout_weight="1"
                		android:text="@string/point_label_value"
                		android:gravity="center"
                		android:textColor="#FFFFFF"/>
                    
                </LinearLayout>
                
                <LinearLayout
        			android:layout_width="match_parent"
        			android:layout_height="0dp"
        			android:layout_weight="1"
        			android:orientation="horizontal" >
                    
                    <TextView
                		android:id="@+id/ranking_label_key"
                		android:layout_height="match_parent"
                		android:layout_width="0dp"
                		android:layout_weight="1"
                		android:text="@string/ranking_label_key"
                		android:gravity="center_vertical"
                		android:textColor="#FFFFFF"/>
                    
                    <TextView
                		android:id="@+id/ranking_label_value"
                		android:layout_height="match_parent"
                		android:layout_width="0dp"
                		android:layout_weight="1"
                		android:text="-"
                		android:gravity="center"
                		android:textColor="#FFFFFF"/>
        			
                </LinearLayout>
        		
            </LinearLayout>
            
            <ImageView
                android:id="@+id/CheckRanking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/list"
                android:contentDescription="画像"
                android:layout_marginBottom="0dp"
				android:layout_marginLeft="0dp"
        		android:layout_marginRight="0dp"
        		android:layout_marginTop="0dp"
                />
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CenterLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="#FFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">
        
        <LinearLayout
        	android:id="@+id/DelayContentLayout"
        	android:layout_width="fill_parent"
        	android:layout_height="0dp"
        	android:layout_weight="1"
        	android:orientation="vertical">
        	
            <TextView
        		android:id="@+id/DelayContentLayoutTitle"
        		android:layout_width="fill_parent"
        		android:layout_height="25dp"
        		android:textSize="20sp"
        		android:textColor="#555555"
        		android:text="現在の遅延情報" />
       
        	<ScrollView
            	android:id="@+id/DelayContentLayoutScrollView"
        		android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:background="@drawable/scrollview_background" >
            
	        </ScrollView>
            
        </LinearLayout>
        
        <LinearLayout
        	android:id="@+id/BetContentLayout"
        	android:layout_width="fill_parent"
        	android:layout_height="0dp"
        	android:layout_weight="2"
        	android:orientation="vertical">
        	
            <TextView
        		android:id="@+id/BetContentLayoutTitle"
        		android:layout_width="fill_parent"
        		android:layout_height="25dp"
        		android:textSize="20sp"
        		android:textColor="#555555"
        		android:text="選択中の駅（最大10）" />
       
        	<ScrollView
            	android:id="@+id/BetContentLayoutScrollView"
        		android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:background="@drawable/scrollview_background">
                
        	    <LinearLayout
        			android:id="@+id/BetContentLayoutScrollViewInnerLayout"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:orientation="vertical">
                    
        	    </LinearLayout>
            
	        </ScrollView>
            
        </LinearLayout>
                    
    </LinearLayout>
    
</LinearLayout>